# bolt5

./: AGENTS.md  CHANGELOG  README.md  flake.nix  ppad-bolt5.cabal
bench/: Main.hs  Weight.hs
lib/Lightning/Protocol/: BOLT5.hs
lib/Lightning/Protocol/BOLT5/: Detect.hs  Internal.hs  Spend.hs  Types.hs
plans/: ARCH1.md  IMPL1.md
test/: Main.hs
